数字ボタン全画面で適用、簡易簿記更新処理追加

--- a/resources/css/FormInputMath.css
+++ b/resources/css/FormInputMath.css
@@ -4,3 +4,9 @@
     border:outset 1px rgb(203, 202, 202);
     border-radius: 5px;
 }
+
+.center{
+    text-align: center;
+    display: flex;
+    justify-content: center;
+}
